install/kubernetes/tme/deploy-schedule.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeflow-dashboard-schedule
  namespace: infra
  labels:
    app: kubeflow-dashboard-schedule

spec:
  replicas: 1   # 只能是一个
  selector:
    matchLabels:
      app: kubeflow-dashboard-schedule
  template:
    metadata:
      name: kubeflow-dashboard-schedule
      labels:
        app: kubeflow-dashboard-schedule
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubeflow-dashboard
                operator: In
                values:
                - "true"
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
        - name: kubeflow-dashboard-config
          configMap:
            name: kubeflow-dashboard-config
            items:
              - key: entrypoint.sh
                path: entrypoint.sh
              - key: config.py
                path: config.py
        - name: kubernetes-config
          configMap:
            name: kubernetes-config

      imagePullSecrets:
      - name: csig-hubsecret
      # hostNetwork: true   # 使用主机网络，要保障本机l5可用    
      containers:
        - name: kubeflow-dashboard-schedule
          image: ai.tencentmusic.com/tme-public/kubeflow-dashboard:tme-2021.10.01
          imagePullPolicy: Always
          # command: ["bash","/entrypoint.sh"]
          command: ["bash","-c",'echo "" > /etc/ld.so.preload && celery beat --loglevel=info --app=myapp.tasks.celery_app:celery_app']    # 如果修改了entrypoint
          # command: ["sleep","300000"]
          resources:       
            limits:
              cpu: 6
              memory: 6Gi
            requests:
              cpu: 10m
              memory: 100Mi
          volumeMounts:
            - name: kubeflow-dashboard-config
              mountPath: /entrypoint.sh
              subPath: entrypoint.sh
            - name: kubeflow-dashboard-config
              mountPath: /home/myapp/myapp/config.py
              subPath: config.py
            - name: tz-config
              mountPath: /etc/localtime
            - name: kubernetes-config
              mountPath: /home/myapp/kubeconfig
