install/kubernetes/tme/deploy-watch-tke.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeflow-watch-tke
  namespace: infra
  labels:
    app: kubeflow-watch-tke
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubeflow-watch-tke
  template:
    metadata:
      name: kubeflow-watch-tke
      labels:
        app: kubeflow-watch-tke
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubeflow-dashboard
                operator: In
                values:
                - "true"
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
        - name: kubeflow-dashboard-config
          configMap:
            name: kubeflow-dashboard-config
            items:
              - key: entrypoint.sh
                path: entrypoint.sh
              - key: config.py
                path: config.py
        - name: kubernetes-config
          configMap:
            name: kubernetes-config

      hostAliases:
      - ip: "10.123.119.83"
        hostnames:
        - "login.oa.com"
      - ip: "10.14.83.153"
        hostnames:
        - "passport.oa.com"
      - ip: "10.101.140.98"
        hostnames:
        - "cls-g9v4gmm0.ccs.tencent-cloud.com"

      imagePullSecrets:
      - name: csig-hubsecret
      serviceAccount: kubeflow-dashboard
      containers:
        - name: kubeflow-watch-workflow
          image: ai.tencentmusic.com/tme-public/kubeflow-dashboard:tme-2021.10.01.2
          imagePullPolicy: Always  # IfNotPresent
          workingDir: /home/myapp/myapp/tools
          command: ["python","watch_workflow.py"]
#          command: ["sleep","300000"]
          volumeMounts:
            - name: kubeflow-dashboard-config
              mountPath: /entrypoint.sh
              subPath: entrypoint.sh
            - name: kubeflow-dashboard-config
              mountPath: /home/myapp/myapp/config.py
              subPath: config.py
            - name: tz-config
              mountPath: /etc/localtime
            - name: kubernetes-config
              mountPath: /home/myapp/kubeconfig
          resources:
            limits:
              cpu: 4
              memory: 4Gi
            requests:
              cpu: 1
              memory: 1Gi
          livenessProbe:
            failureThreshold: 1
            exec:
              command: ["bash","-c","hour=`date +%H`; if [ $hour -eq 03 ]; then exit 1; fi"]
            initialDelaySeconds: 3600
            periodSeconds: 3600
            timeoutSeconds: 3600
        - name: kubeflow-watch-experiments
          image: ai.tencentmusic.com/tme-public/kubeflow-dashboard:tme-2021.10.01.2
          imagePullPolicy: Always  # IfNotPresent
          workingDir: /home/myapp/myapp/tools
          command: ["python","watch_experiments.py"]
#          command: ["sleep","300000"]
          volumeMounts:
            - name: kubeflow-dashboard-config
              mountPath: /entrypoint.sh
              subPath: entrypoint.sh
            - name: kubeflow-dashboard-config
              mountPath: /home/myapp/myapp/config.py
              subPath: config.py
            - name: tz-config
              mountPath: /etc/localtime
            - name: kubernetes-config
              mountPath: /home/myapp/kubeconfig
          resources:
            limits:
              cpu: 4
              memory: 4Gi
            requests:
              cpu: 1
              memory: 1Gi

        - name: kubeflow-watch-tfjobs
          image: ai.tencentmusic.com/tme-public/kubeflow-dashboard:tme-2021.10.01.2
          imagePullPolicy: Always  # IfNotPresent
          workingDir: /home/myapp/myapp/tools
          command: ["python","watch_tfjob.py"]
#          command: ["sleep","300000"]
          volumeMounts:
            - name: kubeflow-dashboard-config
              mountPath: /entrypoint.sh
              subPath: entrypoint.sh
            - name: kubeflow-dashboard-config
              mountPath: /home/myapp/myapp/config.py
              subPath: config.py
            - name: tz-config
              mountPath: /etc/localtime
            - name: kubernetes-config
              mountPath: /home/myapp/kubeconfig
          resources:
            limits:
              cpu: 4
              memory: 4Gi
            requests:
              cpu: 1
              memory: 1Gi
        - name: kubeflow-watch-pytorchjobs
          image: ai.tencentmusic.com/tme-public/kubeflow-dashboard:tme-2021.10.01.2
          imagePullPolicy: Always  # IfNotPresent
          workingDir: /home/myapp/myapp/tools
          command: ["python","watch_pytorchjob.py"]
#          command: ["sleep","300000"]
          volumeMounts:
            - name: kubeflow-dashboard-config
              mountPath: /entrypoint.sh
              subPath: entrypoint.sh
            - name: kubeflow-dashboard-config
              mountPath: /home/myapp/myapp/config.py
              subPath: config.py
            - name: tz-config
              mountPath: /etc/localtime
            - name: kubernetes-config
              mountPath: /home/myapp/kubeconfig
          resources:
            limits:
              cpu: 4
              memory: 4Gi
            requests:
              cpu: 1
              memory: 1Gi
