install/kubernetes/tme/deploy-worker.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeflow-dashboard-worker
  namespace: infra
  labels:
    app: kubeflow-dashboard-worker

spec:
  replicas: 1   # 只能是一个
  selector:
    matchLabels:
      app: kubeflow-dashboard-worker
  template:
    metadata:
      name: kubeflow-dashboard-worker
      labels:
        app: kubeflow-dashboard-worker
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubeflow-dashboard
                operator: In
                values:
                - "true"
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
        - name: kubeflow-dashboard-config
          configMap:
            name: kubeflow-dashboard-config
            items:
              - key: entrypoint.sh
                path: entrypoint.sh
              - key: config.py
                path: config.py
        - name: kubernetes-config
          configMap:
            name: kubernetes-config

        - name: infra-kubeflow
          hostPath:
            path: /data/k8s/kubeflow/

      hostAliases:
      - ip: "10.123.119.83"
        hostnames:
        - "login.oa.com"
      - ip: "10.14.83.153"
        hostnames:
        - "passport.oa.com"
      - ip: "11.181.92.133"
        hostnames:
        - "ml-pipeline.idc.woa.com"
      - ip: "10.101.140.98"
        hostnames:
        - "cls-g9v4gmm0.ccs.tencent-cloud.com"

      imagePullSecrets:
      - name: csig-hubsecret
        # hostNetwork: true
      serviceAccount: kubeflow-dashboard
      containers:
        - name: kubeflow-dashboard-worker
          image: ai.tencentmusic.com/tme-public/kubeflow-dashboard:tme-2021.10.01
          imagePullPolicy: Always
          # command: ["bash","/entrypoint.sh"]
          command: ["bash","-c",'celery worker --app=myapp.tasks.celery_app:celery_app --loglevel=info --pool=prefork -Ofair -c 20']    # 如果修改了entrypoint
          # command: ["sleep","300000"]
          resources:       
            limits:
              cpu: 6
              memory: 6Gi
            requests:
              cpu: 10m
              memory: 100Mi
          volumeMounts:
            - name: kubeflow-dashboard-config
              mountPath: /entrypoint.sh
              subPath: entrypoint.sh
            - name: kubeflow-dashboard-config
              mountPath: /home/myapp/myapp/config.py
              subPath: config.py
            - name: tz-config
              mountPath: /etc/localtime
            - name: kubernetes-config
              mountPath: /home/myapp/kubeconfig
            - name: infra-kubeflow
              mountPath: /data/k8s/kubeflow/
